--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     }
   },
   "dependencies": {
+    "@icons/material": "^0.4.1",
+    "bootstrap-icons": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
