--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "bootstrap-icons": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "firebase": "^9.1.0",
+    "firebase-admin": "^9.11.1",
     "spin.js": "^4.1.1"
   },
   "devDependencies": {
