--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "build": "electron-packager --out winx64 --overwrite --platform win32 --appname clientlmcenter . --icon=./icon.ico"
   },
   "keywords": [],
   "author": {
@@ -50,7 +51,10 @@
     "electron-squirrel-startup": "^1.0.0",
     "firebase": "^9.1.0",
     "firebase-admin": "^9.11.1",
-    "spin.js": "^4.1.1"
+    "spin.js": "^4.1.1",
+    "file-saver": "^2.0.5",
+    "html-pdf": "^3.0.1",
+    "vanilla-masker": "^1.2.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.61",
