Organização da nomeclatura contrato_pdf

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "seta_cursos-app",
   "productName": "seta_cursos-app",
   "version": "1.0.2",
-  "description": "Aplicativo de gerencimento da SETA CURSOS",
+  "description": "Aplicativo de gerenciamento da SETA CURSOS",
   "main": "src/main.js",
   "scripts": {
     "start": "electron-forge start",
