--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "productName": "seta_cursos-app",
   "version": "1.0.8",
   "description": "Aplicativo de gerenciamento da SETA CURSOS",
-  "main": "src/main.js",
+  "main": "src/main.cjs",
+"type": "module", 
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\"",
-    "build": "electron-packager --out winx64 --overwrite --platform win32 --appname clientlmcenter . --icon=./icon.ico"
+    "build": "electron-packager --out winx64 --overwrite --platform win32 --appname clientlmcenter . --icon=./icon.ico",
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
+  
   },
   "keywords": [],
   "author": {
@@ -64,8 +67,13 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "electron": "13.1.2",
+    "jest": "^28.1.2",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "webpack": "^5.39.1"
+  },
+  
+  "jest": {
+    "verbose": true
   }
 }
