--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "version": "1.0.8",
   "description": "Aplicativo de gerenciamento da SETA CURSOS",
   "main": "src/main.cjs",
-"type": "module", 
+  "type": "module", 
+
+"jest": {
+  "transform": {}
+},
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -12,7 +16,7 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\"",
     "build": "electron-packager --out winx64 --overwrite --platform win32 --appname clientlmcenter . --icon=./icon.ico",
-    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   
   },
   "keywords": [],
@@ -71,9 +75,7 @@
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "webpack": "^5.39.1"
-  },
-  
-  "jest": {
-    "verbose": true
   }
+  
+
 }
