--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "1.0.9",
   "description": "Aplicativo de gerenciamento da SETA CURSOS",
   "main": "src/main.cjs",
-  "type": "module", 
-
-"jest": {
-  "transform": {}
-},
+  "type": "module",
+  "jest": {
+    "transform": {}
+  },
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -17,7 +16,6 @@
     "lint": "echo \"No linting configured\"",
     "build": "electron-packager --out winx64 --overwrite --platform win32 --appname clientlmcenter . --icon=./icon.ico",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
-  
   },
   "keywords": [],
   "author": {
@@ -61,6 +59,7 @@
     "firebase-admin": "^9.11.1",
     "html-pdf": "^3.0.1",
     "jsdom": "^17.0.0",
+    "ramda": "^0.28.0",
     "spin.js": "^4.1.1",
     "vanilla-masker": "^1.2.0"
   },
@@ -76,6 +75,4 @@
     "sass-loader": "^12.1.0",
     "webpack": "^5.39.1"
   }
-  
-
 }
